Ajout H1 Mid et Hi sur tableau récap

--- a/tex/RecapCondExpe.tex
+++ b/tex/RecapCondExpe.tex
@@ -26,14 +26,14 @@ Les conditions expérimentales du chapitre~\ref{chap:EtudeExpe_ConvNat} sont ré
 	\num{5} & \num{1.1} &  \num{2} & \num{8.1e4} & \num{5.4e4} & \num{2.7e5} & \num{94} & \num{-155} & \\*
 	\num{5.1} & \num{1.1} &  \num{2} & \num{8e4} & \num{5.4e4} & \num{2.7e5} & \num{93} & \num{-156} & \\*
 	\num{8.5} & \num{1.8} &  \num{3.4} & \num{1.4e5} & \num{5.6e4} & \num{3e5} & \num{94} & \num{-156} & \\*
-	\num{} & \num{} &  \num{3.5} & \num{} & \num{} & \num{} & \num{} & \num{} & \\*
-	\num{} & \num{} &  \num{3.5} & \num{} & \num{} & \num{} & \num{} & \num{} & \\
+	\num{8.5} & \num{1.7} &  \num{3.5} & \num{1.4e5} & \num{5.7e4} & \num{3.2e5} & \num{94} & \num{-152} & \\*
+	\num{8.5} & \num{1.8} &  \num{3.5} & \num{1.4e5} & \num{5.7e4} & \num{3.3e5} & \num{94} & \num{-151} & \\
 	
 	 \hdashline
 	\num{0} & \num{0} &  \num{0} & \num{0} & --- & --- & --- & --- & \multirow{8}{*}{`\texttt{H2}'} \\*
 	\num{1} & \num{.4} & \num{.4} & \num{1.5e4} & \num{5.4e4} & \num{2.3e5} & \num{93} & \num{-151} & \\*
 	\num{5} & \num{1.2} & \num{2} & \num{8.1e4} & \num{5.5e4} & \num{2.7e5} & \num{94} & \num{-154} & \\*
-	\num{} & \num{} &  \num{2} & \num{} & \num{} & \num{} & \num{} & \num{} & \\*
+	\num{5} & \num{1.1} &  \num{2} & \num{8.2e4} & \num{5.7e4} & \num{2.9e5} & \num{93} & \num{-150} & \\*
 	\num{} & \num{} &  \num{2} & \num{} & \num{} & \num{} & \num{} & \num{} & \\*
 	\num{8.5} & \num{1.7} & \num{3.4} & \num{1.4e5} & \num{5.5e4} & \num{3e5} & \num{94} & \num{-156} & \\*
 	\num{} & \num{} &  \num{3.5} & \num{} & \num{} & \num{} & \num{} & \num{} & \\*
@@ -85,15 +85,15 @@ Les conditions expérimentales du chapitre~\ref{chap:EtudeExpe_ConvNat} sont ré
 	\num{5} & \num{1.1} &  \num{2} & \num{292} & \num{272} & \num{287} & \num{84} & \num{50} & \num{4.5} & \\*
 	\num{5.1} & \num{1.1} &  \num{2} & \num{295} & \num{289} & \num{291} & \num{117} & \num{100} & \num{2.7} & \\*
 	\num{8.5} & \num{1.8} & \num{3.4} & \num{296} & \num{256} & \num{283} & \num{194} & \num{0} & \num{0} & \\*
-	\num{} & \num{} &  \num{3.5} & \num{} & \num{} & \num{} & \num{} & \num{50} & \num{} & \\*
-	\num{} & \num{} &  \num{3.5} & \num{} & \num{} & \num{} & \num{} & \num{100} & \num{} & \\
+	\num{8.5} & \num{1.7} &  \num{3.5} & \num{292} & \num{260} & \num{284} & \num{216} & \num{50} & \num{2.9} & \\*
+	\num{8.5} & \num{1.8} &  \num{3.5} & \num{293} & \num{267} & \num{287} & \num{240} & \num{100} & \num{4.9} & \\
 	
 	 \hdashline
 	\num{0} & \num{0} &  \num{0} & \num{293} & \num{304} & \num{} & \num{12} & 40 & --- & \multirow{8}{*}{`\texttt{H2}'} \\*
 	\num{1} & \num{.4} & \num{.4} & \num{291} & \num{287} & \num{} & \echaf{\num{-.9}} & \num{0} & \num{0} & \\*
 	\num{5} & \num{1.2} & \num{2} & \num{293} & \num{263} & \num{} & \num{74} & \num{0} & \num{0} & \\*
-	\num{} & \num{} &  \num{2} & \num{} & \num{} & \num{} & \num{} & \num{50} & \num{} & \\*
-	\num{} & \num{} &  \num{2} & \num{} & \num{} & \num{} & \num{} & \num{50} & \num{} & \\*
+	\num{5} & \num{1.1} &  \num{2} & \num{294} & \num{275} & \num{290} & \num{119} & \num{50} & \num{5} & \\*
+	\num{5} & \num{1.1} &  \num{2} & \num{298} & \num{287} & \num{293} & \num{139} & \num{100} & \num{6} & \\*
 	\num{8.5} & \num{1.7} & \num{3.4} & \num{299} & \num{257} & \num{} & \num{158} & \num{0} & \num{0} & \\*
 	\num{} & \num{} &  \num{3.5} & \num{} & \num{} & \num{} & \num{} & \num{50} & \num{} & \\*
 	\num{} & \num{} &  \num{3.5} & \num{} & \num{} & \num{} & \num{} & \num{50} & \num{} & \\
