--- a/tex/RecapCondExpe.tex
+++ b/tex/RecapCondExpe.tex
@@ -33,11 +33,11 @@ Les conditions expérimentales du chapitre~\ref{chap:EtudeExpe_ConvNat} sont ré
 	\num{0} & \num{0} &  \num{0} & \num{0} & --- & --- & --- & --- & \multirow{8}{*}{`\texttt{H2}'} \\*
 	\num{1} & \num{.4} & \num{.4} & \num{1.5e4} & \num{5.4e4} & \num{2.3e5} & \num{93} & \num{-151} & \\*
 	\num{5} & \num{1.2} & \num{2} & \num{8.1e4} & \num{5.5e4} & \num{2.7e5} & \num{94} & \num{-154} & \\*
-	\num{5} & \num{1.1} &  \num{2} & \num{8.2e4} & \num{5.7e4} & \num{2.9e5} & \num{93} & \num{-150} & \\*
-	\num{} & \num{} &  \num{2} & \num{} & \num{} & \num{} & \num{} & \num{} & \\*
+	\num{4.9} & \num{1.1} &  \num{2} & \num{8.2e4} & \num{5.7e4} & \num{2.9e5} & \num{93} & \num{-150} & \\*
+	\num{5} & \num{1.1} &  \num{2} & \num{8.1e4} & \num{5.6e4} & \num{2.9e5} & \num{93} & \num{-150} & \\*
 	\num{8.5} & \num{1.7} & \num{3.4} & \num{1.4e5} & \num{5.5e4} & \num{3e5} & \num{94} & \num{-156} & \\*
-	\num{} & \num{} &  \num{3.5} & \num{} & \num{} & \num{} & \num{} & \num{} & \\*
-	\num{} & \num{} &  \num{3.5} & \num{} & \num{} & \num{} & \num{} & \num{} & \\
+	\num{8.4} & \num{1.8} &  \num{3.5} & \num{1.4e5} & \num{5.7e4} & \num{3.3e5} & \num{94} & \num{-154} & \\*
+	\num{8.4} & \num{1.7} &  \num{3.5} & \num{1.4e5} & \num{5.7e4} & \num{3.3e5} & \num{94} & \num{-152} & \\
 	
 	 \hdashline
 	\num{0} & \num{0} & \num{0} & \num{0} & --- & --- & --- & --- &  \multirow{8}{*}{`\texttt{V1}'} \\*
@@ -53,8 +53,8 @@ Les conditions expérimentales du chapitre~\ref{chap:EtudeExpe_ConvNat} sont ré
 	\num{0} & \num{0} & \num{0} & \num{0} & --- & --- & --- & --- & \multirow{8}{*}{`\texttt{V2}'} \\*
 	\num{1} & \num{.7} & \num{.4} & \num{1.6e4} & \num{5.6e4} & \num{9.8e4} & \num{93} & \num{-148} & \\*
 	\num{5} & \num{1.7} & \num{2} & \num{8.3e4} & \num{5.6e4} & \num{2.5e5} & \num{93} & \num{-152} & \\*
-	\num{5} & \num{1.6} & \num{2} & \num{8.1e4} & \num{5.5e4} & \num{2.5e5} & \num{93} & \num{-151} & \\*
-	\num{5} & \num{1.3} & \num{2} & \num{8.1e4} & \num{5.5e4} & \num{2.6e5} & \num{93} & \num{-149} & \\*
+	\num{5.1} & \num{1.6} & \num{2} & \num{8.1e4} & \num{5.5e4} & \num{2.5e5} & \num{93} & \num{-151} & \\*
+	\num{5.1} & \num{1.3} & \num{2} & \num{8.1e4} & \num{5.5e4} & \num{2.6e5} & \num{93} & \num{-149} & \\*
 	\num{8.6} & \num{2.24} & \num{3.5} & \num{1.4e5} & \num{5.6e4} & \num{2.9e5} & \num{94} & \num{-151} & \\*
 	\num{8.4} & \num{2.24} & \num{3.4} & \num{1.3e5} & \num{5.5e4} & \num{2.8e5} & \num{94} & \num{-151} & \\*
 	\num{8.4} & \num{2} & \num{3.4} & \num{1.3e5} & \num{5.5e4} & \num{2.8e5} & \num{93} & \num{-151} & \\*
@@ -89,34 +89,34 @@ Les conditions expérimentales du chapitre~\ref{chap:EtudeExpe_ConvNat} sont ré
 	\num{8.5} & \num{1.8} &  \num{3.5} & \num{293} & \num{267} & \num{287} & \num{240} & \num{100} & \num{4.9} & \\
 	
 	 \hdashline
-	\num{0} & \num{0} &  \num{0} & \num{293} & \num{304} & \num{} & \num{12} & 40 & --- & \multirow{8}{*}{`\texttt{H2}'} \\*
-	\num{1} & \num{.4} & \num{.4} & \num{291} & \num{287} & \num{} & \echaf{\num{-.9}} & \num{0} & \num{0} & \\*
-	\num{5} & \num{1.2} & \num{2} & \num{293} & \num{263} & \num{} & \num{74} & \num{0} & \num{0} & \\*
-	\num{5} & \num{1.1} &  \num{2} & \num{294} & \num{275} & \num{290} & \num{119} & \num{50} & \num{5} & \\*
+	\num{0} & \num{0} &  \num{0} & \num{293} & \num{304} & \num{296} & \num{12} & 40 & --- & \multirow{8}{*}{`\texttt{H2}'} \\*
+	\num{1} & \num{.4} & \num{.4} & \num{291} & \num{287} & \num{291} & \echaf{\num{-.9}} & \num{0} & \num{0} & \\*
+	\num{5} & \num{1.2} & \num{2} & \num{293} & \num{263} & \num{287} & \num{74} & \num{0} & \num{0} & \\*
+	\num{4.9} & \num{1.1} &  \num{2} & \num{294} & \num{275} & \num{290} & \num{119} & \num{50} & \num{5} & \\*
 	\num{5} & \num{1.1} &  \num{2} & \num{298} & \num{287} & \num{293} & \num{139} & \num{100} & \num{6} & \\*
-	\num{8.5} & \num{1.7} & \num{3.4} & \num{299} & \num{257} & \num{} & \num{158} & \num{0} & \num{0} & \\*
-	\num{} & \num{} &  \num{3.5} & \num{} & \num{} & \num{} & \num{} & \num{50} & \num{} & \\*
-	\num{} & \num{} &  \num{3.5} & \num{} & \num{} & \num{} & \num{} & \num{50} & \num{} & \\
+	\num{8.5} & \num{1.7} & \num{3.4} & \num{299} & \num{257} & \num{284} & \num{158} & \num{0} & \num{0} & \\*
+	\num{8.4} & \num{1.8} &  \num{3.5} & \num{299} & \num{267} & \num{287} & \num{202} & \num{50} & \num{2.9} & \\*
+	\num{8.4} & \num{1.8} &  \num{3.5} & \num{302} & \num{275} & \num{290} & \num{226} & \num{100} & \num{5.1} & \\
 	
 	 \hdashline
-	\num{0} & \num{0} & \num{0} & \num{296} & \num{335} & \num{} & \num{11} & \num{40} & --- & \multirow{8}{*}{`\texttt{V1}'} \\*
-	\num{1} & \num{.4} & \num{.4} & \num{294} & \num{290} & \num{} & \num{2} & \num{0} & \num{0} & \\*
-	\num{5} & \num{1.1} & \num{2} & \num{299} & \num{270} & \num{} & \num{53} & \num{0} & \num{0} & \\*
-	\num{5} & \num{1.1} & \num{2} & \num{298} & \num{280} & \num{} & \num{86} & \num{50} & \num{4.6} & \\*
-	\num{5} & \num{1.1} & \num{2} & \num{302} & \num{292} & \num{} & \num{105} & \num{100} & \num{5.4} & \\*
-	\num{8.4} & \num{1.6} & \num{3.5} & \num{311} & \num{267} & \num{} & \num{167} & \num{0} & \num{0} & \\*
-	\num{8.3} & \num{1.7} & \num{3.4} & \num{310} & \num{270} & \num{} & \num{192} & \num{50} & \num{3.5} & \\*
-	\num{8.3} & \num{1.7} & \num{3.4} & \num{310} & \num{275} & \num{} & \num{218} & \num{100} & \num{5.4} & \\
+	\num{0} & \num{0} & \num{0} & \num{296} & \num{335} & \num{293} & \num{11} & \num{40} & --- & \multirow{8}{*}{`\texttt{V1}'} \\*
+	\num{1} & \num{.4} & \num{.4} & \num{294} & \num{290} & \num{293} & \num{2} & \num{0} & \num{0} & \\*
+	\num{5} & \num{1.1} & \num{2} & \num{299} & \num{270} & \num{285} & \num{53} & \num{0} & \num{0} & \\*
+	\num{5} & \num{1.1} & \num{2} & \num{298} & \num{280} & \num{290} & \num{86} & \num{50} & \num{4.6} & \\*
+	\num{5} & \num{1.1} & \num{2} & \num{302} & \num{292} & \num{295} & \num{105} & \num{100} & \num{5.4} & \\*
+	\num{8.4} & \num{1.6} & \num{3.5} & \num{311} & \num{267} & \num{289} & \num{167} & \num{0} & \num{0} & \\*
+	\num{8.3} & \num{1.7} & \num{3.4} & \num{310} & \num{270} & \num{288} & \num{192} & \num{50} & \num{3.5} & \\*
+	\num{8.3} & \num{1.7} & \num{3.4} & \num{310} & \num{275} & \num{291} & \num{218} & \num{100} & \num{5.4} & \\
 	
 	 \hdashline 
-	\num{0} & \num{0} & \num{0} & \num{} & \num{} & \num{} & \num{} & \num{} & \num{40} & \multirow{8}{*}{`\texttt{V2}'} \\*
-	\num{1} & \num{.7} & \num{.4} & \num{290} & \num{284} & \num{} & \num{5} & \num{0} & \num{0} & \\*
-	\num{5} & \num{1.7} & \num{2} & \num{293} & \num{264} & \num{} & \num{61} & \num{0} & \num{0} & \\*
-	\num{5} & \num{1.6} & \num{2} & \num{292} & \num{274} & \num{} & \num{86} & \num{50} & \num{4.2} & \\*
-	\num{5} & \num{1.3} & \num{2} & \num{294} & \num{287} & \num{} & \num{107} & \num{100} & \num{3.4} & \\*
-	\num{8.6} & \num{2.24} & \num{3.5} & \num{294} & \num{257} & \num{} & \num{176} & \num{0} & \num{0} & \\*
-	\num{8.4} & \num{2.24} & \num{3.4} & \num{293} & \num{261} & \num{} & \num{189} & \num{50} & \num{3.1} & \\*
-	\num{8.4} & \num{2} & \num{3.4} & \num{295} & \num{263} & \num{} & \num{210} & \num{100} & \num{5.2} & \\*
+	\num{0} & \num{0} & \num{0} & \num{293} & \num{307} & \num{312} & \num{.7} & \num{40} & --- & \multirow{8}{*}{`\texttt{V2}'} \\*
+	\num{1} & \num{.7} & \num{.4} & \num{290} & \num{284} & \num{290} & \num{5} & \num{0} & \num{0} & \\*
+	\num{5} & \num{1.7} & \num{2} & \num{293} & \num{264} & \num{286} & \num{61} & \num{0} & \num{0} & \\*
+	\num{5.1} & \num{1.6} & \num{2} & \num{292} & \num{274} & \num{287} & \num{86} & \num{50} & \num{4.2} & \\*
+	\num{5.1} & \num{1.3} & \num{2} & \num{294} & \num{287} & \num{292} & \num{107} & \num{100} & \num{3.4} & \\*
+	\num{8.6} & \num{2.24} & \num{3.5} & \num{294} & \num{257} & \num{282} & \num{176} & \num{0} & \num{0} & \\*
+	\num{8.4} & \num{2.24} & \num{3.4} & \num{293} & \num{261} & \num{283} & \num{189} & \num{50} & \num{3.1} & \\*
+	\num{8.4} & \num{2} & \num{3.4} & \num{295} & \num{263} & \num{286} & \num{210} & \num{100} & \num{5.2} & \\*
 \end{longtable}
 	
 
