Quelques modifs Chap 2

--- a/bib/phd_bib.bib
+++ b/bib/phd_bib.bib
@@ -1,4 +1,20 @@
 
+@incollection{lewis_measurement_1998,
+	location = {Boston, {MA}},
+	title = {Measurement of Heat Conduction through Stacked Screens},
+	isbn = {978-1-4757-9049-8},
+	url = {http://link.springer.com/10.1007/978-1-4757-9047-4_202},
+	pages = {1611--1618},
+	booktitle = {Advances in Cryogenic Engineering},
+	publisher = {Springer {US}},
+	author = {Lewis, M. A. and Kuriyama, T. and Kuriyama, F. and Radebaugh, R.},
+	editor = {Kittel, Peter},
+	urldate = {2024-12-23},
+	date = {1998},
+	doi = {10.1007/978-1-4757-9047-4_202},
+	file = {Kuriyama et al. - MEASUREMENT OF BEAT CONDUCTION THROUGH STACKED SCR.pdf:C\:\\Users\\mfontbon\\Desktop\\sDrive\\Zotero\\storage\\7XWWNXX3\\Kuriyama et al. - MEASUREMENT OF BEAT CONDUCTION THROUGH STACKED SCR.pdf:application/pdf},
+}
+
 @book{getling_rayleigh-benard_1998,
 	location = {Singapore},
 	title = {Rayleigh-Bénard convection: structures and dynamics},
