--- a/tex/EtudeExperimentale.tex
+++ b/tex/EtudeExperimentale.tex
@@ -366,6 +366,21 @@ Les figures~\ref{fig:Acou_CHXin_H1H2_High}, \ref{fig:Acou_Regmid_H1H2_High} et \
 
 \section{Limite de répétabilité}
 
+De nombreux phénomènes se produisent dans le noyau sans qu'il ne soit pour l'heure possible des les expliquer. L'un d'eux a pour répercussion une difficulté à répondre à la question de la reproductibilité de la distribution de température dans le noyau, car la température présente plusieurs points de stabilité. Une expérience réalisée dans l'orientation `\texttt{V1}', à haute amplitude acoustique et sans charge thermique est reproduite à deux reprises pour vérifier la répétabilité des mesures. À l'opposé du résultat anticipé, la distribution est complètement différente \echaf{à continuer}  
+
+Ces expériences, issues d'une autre série de mesure interrompue justement à cause de son allure radicalement différente des résultats obtenus, sont tracés sur la figure~\ref{fig:Repetabilite_V1}.
+
+\begin{figure}[!ht]
+    \centering
+    \external{fig_Repetabilite_V1}
+    %\externalremake
+    \input{../fig/fig_Repetabilite_V1/tex/fig_Repetabilite_V1}
+    \caption{\echaf{Figure illustrant des problèmes de répétabilité}}
+    \label{fig:Repetabilite_V1}
+\end{figure}
+
+Dans cette
+
 \section{Conduction par les parois du régénérateur}
 La conduction par les parois du noyau thermoacoustique est un facteur très important à prendre en compte. En effet, lorsque le réfrigérateur fonctionne et qu'un gradient de température s'établit le long du régénérateur, un flux de chaleur \og retour \fg{} de conduction apparaît dans le sens opposé au flux de chaleur thermoacoustique. Cependant, contrairement au matériau poreux qui compose le régénérateur, il n'est pas nécessaire que les parois soit conductrice de chaleur. Dans cette section, la \echaf{canette/carter/boîte/enceinte} qui contient les disques de tissu métallique et qui est initialement usinée dans un cylindre d'acier inoxydable est remplacée par une pièce similaire imprimée en plastique. L'ABS est choisi pour la fabrication de ce nouveau contenant plutôt que le PLA, car ce dernier peut se ramollir sous l'action des températures atteintes dans certaines expériences, c'est-à-dire autour de \num{50} à \qty{60}{\degreeCelsius}. Dans le cas de l'ABS, cette température limite d'utilisation est élevée à \qty{100}{\degreeCelsius}.
 
